Fixed Temp site on Mobile

--- a/maincss.css
+++ b/maincss.css
@@ -69,7 +69,10 @@ body{
 
  /* tiny devices (phones, below 480px) */
  @media only screen and (max-width: 480px) {
-
+    .welcometitle{
+        width: 90vw;
+        margin: 0 auto;
+       }
  }
 
 
